<resources>
    <string name="app_name">Personal_CV</string>
    <string name="tab_text_1">Me</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="tab_text_4">Tab 4</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment1">Hello blank Home</string>
    <string name="hello_blank_fragment2">Hello blank about</string>
    <string name="hello_blank_fragment3">Hello blank work</string>
    <string name="hello_blank_fragment4">Hello blank contac</string>

    <string name="qualification">Talented Software Engineer with 5 years of hands-on experience in leading projects through all phases of software development life cycle while improving quality and performance. Effective team leader who evaluates and analyzes requirements to ensure projects meet customer requirements and needs. Skilled in implementing technologies such as Java, Apache, Tomcat, Angular, Bootstrap, MySQL, Postgre, Eclipse, IntelliJ, NetBeans, and Atom Spring and Hibernate.Talented Software Engineer with 5 years of hands-on experience in leading projects through all phases of software development life cycle while improving quality and performance. Effective team leader who evaluates and analyzes requirements to ensure projects meet customer requirements and needs. Skilled in implementing technologies such as Java, Apache, Tomcat, Angular, Bootstrap, MySQL, Postgre, Eclipse, IntelliJ, NetBeans, and Atom Spring and Hibernate.</string>
    <string name="profile_picture">profile picture</string>
    <string name="position">Software Engineer</string>
<!--    titles-->
    <string name="educational_background_t">Educational Backgoround</string>
    <string name="personal_info_t">Personal Information</string>
    <string name="strength_t">Strength</string>
    <string name="weakness_t">Weakness</string>
    <string name="technical_skill_t">Technical Skills</string>
    <string name="experiance_t">Professional Experience</string>
    <string name="project_info_t">Projects</string>
    <string name="address_t">Address</string>


<!--    values-->
    <string name="educational_background_title">Maharishi International University</string>
    <string name="educational_background_sub">MSc. computer science </string>
    <string name="educational_background_year">Feb 2021 - Oct 2023</string>

    <string name="educational_background2_title">Bahir Dar University</string>
    <string name="educational_background2_sub">BSc. computer science</string>
    <string name="educational_background2_year">Jun 2009 - August 2014</string>


    <!--    values-->
    <string name="Professional_experience_title">Software Engineer</string>
    <string name="Professional_experience_sub">G2O</string>
    <string name="Professional_experience_year">Oct 2021 - present</string>

    <string name="Professional_experience2_title">Software Engineer</string>
    <string name="Professional_experience2_sub">Tana Express</string>
    <string name="Professional_experience2_year">Jun 2015 - Nov 2020</string>


    <string name="personal_info">Talented Software Engineer with 5 years of hands-on experience in leading projects through all phases of software development life cycle while improving quality and performance. Effective team leader who evaluates and analyzes requirements to ensure projects meet customer requirements and needs. Skilled in implementing technologies such as Java, Apache, Tomcat, Angular, Bootstrap, MySQL, Postgre, Eclipse, IntelliJ, NetBeans, and Atom Spring and Hibernate.</string>

    <string-array name="strength">
        <item name="strans">Strength 1</item>
        <item name="sdfs">Strength 2</item>
        <item >Strength 3</item>
        <item >Strength 4</item>
    </string-array>

    <string-array name="weakness">
        <item >Weakness</item>
        <item >Weakness</item>
        <item >Weakness</item>
    </string-array>
    <string-array name="DaysOfWeek">
        <item name="Sunday">Sunday</item>
        <item name="Sunday">Monday</item>
        <item name="Sunday">Tuesdayy</item>
        <item name="Sunday">Wednesday</item>
        <item name="Sunday">Thursday</item>
        <item name="Sunday">Friday</item>
        <item name="Sunday">Saturday</item>
    </string-array>
    <string-array name="technical_skill">xxxx
        <item >Technical skill 1</item>
        <item >Technical skill 2</item>
        <item >Technical skill 3</item>
        <item >Technical skill 4</item>
    </string-array>
    <string-array name="Projects">xxxx
        <item >Projects skill 1</item>
        <item >Projects skill 2</item>
        <item >Projects skill 3</item>
        <item >Projects skill 4</item>
    </string-array>

    <string name="address">3896 Alwood ln</string>
    <string name="address2">Groveport, OH</string>
    <string name="phone">+ 1 (571) 331 2578</string>
    <string name="email">addisudalemu@gmail.com</string>
    <string name="fb_link">https://www.facebook.com/addisu.damena/</string>
    <string name="tweeter_link">https://twitter.com/DamenaAddisu</string>
    <string name="linkedin_link">https://www.linkedin.com/in/addisu-alemu/details/education/</string>
    <string name="youtube_line">https://www.youtube.com/channel/UCNVA4zp0op9wuAA5Q3J7Nlg</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>


</resources>