<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/common_margine"
    android:gravity="bottom"
    android:orientation="vertical"
    tools:context=".ui.main.Contact">


    <LinearLayout
        android:id="@+id/addressView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/title_margin_top"
            android:text="@string/address_t"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/address"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/phone"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/title_margin_top"
            android:text="@string/email"
            android:textSize="16sp" />
    </LinearLayout>


    <TextView
        android:id="@+id/textView13"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/title_margin_top"
        android:foregroundGravity="bottom"
        android:text="@string/also_find_me"
        android:textSize="16sp" />

    <WebView
        android:id="@+id/webView"
        android:layout_width="match_parent"
        android:layout_height="364dp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="wrap_content"
            android:layout_height="84dp"
            android:layout_gravity="bottom"
            android:layout_margin="@dimen/fab_margin"
            android:layout_weight="1"
            android:contentDescription="@string/fb_link"
            android:src="@drawable/fb"
            android:onClick="navigate"/>

        <ImageView
            android:id="@+id/imageView7"
            android:layout_width="wrap_content"
            android:layout_height="84dp"
            android:layout_gravity="bottom"
            android:layout_margin="@dimen/fab_margin"
            android:layout_weight="1"
            android:contentDescription="@string/linkedin_link"
            android:src="@drawable/linkedin"
            android:onClick="navigate"/>

        <ImageView
            android:id="@+id/imageView9"
            android:layout_width="wrap_content"
            android:layout_height="84dp"
            android:layout_gravity="bottom"
            android:layout_margin="@dimen/fab_margin"
            android:layout_weight="1"
            android:contentDescription="@string/tweeter_link"
            android:src="@drawable/tweeter"
            android:onClick="navigate"/>

        <ImageView
            android:id="@+id/imageView8"
            android:layout_width="wrap_content"
            android:layout_height="84dp"
            android:layout_gravity="bottom"
            android:layout_margin="@dimen/fab_margin"
            android:layout_weight="1"
            android:contentDescription="@string/youtube_line"
            android:src="@drawable/youtube"
            android:onClick="navigate"/>

    </LinearLayout>

</LinearLayout>